--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.31.0"
